---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "std",
            IdentId(2) => "list",
            IdentId(3) => "List",
            IdentId(4) => "env",
            IdentId(5) => "f",
            IdentId(6) => "p",
            IdentId(7) => "core",
            IdentId(8) => "add",
            IdentId(9) => "boolean",
            IdentId(10) => "div",
            IdentId(11) => "eq",
            IdentId(12) => "ge",
            IdentId(13) => "gt",
            IdentId(14) => "le",
            IdentId(15) => "lt",
            IdentId(16) => "mul",
            IdentId(17) => "neg",
            IdentId(18) => "neq",
            IdentId(19) => "number",
            IdentId(20) => "sub",
            IdentId(21) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 7:26; [152, 155],
                    symbol_id: SymbolId(2),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 7:30; [156, 160],
                    symbol_id: SymbolId(3),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(3),
                    span: 7:35; [161, 165],
                    symbol_id: SymbolId(4),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(7),
                    ],
                ),
                span: 7:41; [167, 169],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(5),
                        StmtId(6),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(3),
                        span: 4:24; [77, 81],
                        symbol_id: SymbolId(4),
                    },
                    [],
                    Provided(
                        [],
                    ),
                    None,
                ),
                span: 4:17; [70, 84],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Namespace(
                    Identifier {
                        id: IdentId(2),
                        span: 3:23; [47, 51],
                        symbol_id: SymbolId(3),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 5:13; [97, 98],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(5),
                        span: 7:21; [147, 148],
                        symbol_id: SymbolId(23),
                    },
                    [],
                    [
                        Parameter {
                            identifier: Identifier {
                                id: IdentId(6),
                                span: 7:23; [149, 150],
                                symbol_id: SymbolId(24),
                            },
                            type_def_id: TypeDefId(0),
                            span: 7:23; [149, 165],
                            type_id: TypeId(5),
                        },
                    ],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(0),
                    ),
                    None,
                ),
                span: 7:17; [143, 169],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(4),
                        span: 6:23; [121, 124],
                        symbol_id: SymbolId(5),
                    },
                    InputId(0),
                    [
                        StmtId(3),
                    ],
                ),
                span: 8:13; [182, 183],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Namespace(
                    Identifier {
                        id: IdentId(1),
                        span: 2:19; [19, 22],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [
                        StmtId(2),
                        StmtId(4),
                    ],
                ),
                span: 9:9; [192, 193],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: Namespace(
                    Identifier {
                        id: IdentId(7),
                        span: 11:11; [213, 217],
                        symbol_id: SymbolId(6),
                    },
                    InputId(0),
                    [],
                ),
                span: 11:17; [219, 220],
            },
            StmtId(7) => Statement {
                id: StmtId(7),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 7:41; [167, 169],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                        IdentRefId(1),
                        IdentRefId(2),
                    ],
                ),
                span: 7:26; [152, 165],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(2),
                        ],
                        IdentId(7): [
                            SymbolId(6),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(1),
                    {
                        IdentId(2): [
                            SymbolId(3),
                        ],
                        IdentId(4): [
                            SymbolId(5),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Namespace(
                    IdentId(2),
                    {
                        IdentId(3): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: Struct(
                    IdentId(3),
                    StmtId(1),
                ),
                type_id: TypeId(5),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: Namespace(
                    IdentId(4),
                    {
                        IdentId(5): [
                            SymbolId(23),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Namespace(
                    IdentId(7),
                    {
                        IdentId(8): [
                            SymbolId(22),
                        ],
                        IdentId(9): [
                            SymbolId(9),
                        ],
                        IdentId(10): [
                            SymbolId(21),
                        ],
                        IdentId(11): [
                            SymbolId(19),
                            SymbolId(20),
                        ],
                        IdentId(12): [
                            SymbolId(18),
                        ],
                        IdentId(13): [
                            SymbolId(17),
                        ],
                        IdentId(14): [
                            SymbolId(16),
                        ],
                        IdentId(15): [
                            SymbolId(15),
                        ],
                        IdentId(16): [
                            SymbolId(14),
                        ],
                        IdentId(17): [
                            SymbolId(13),
                        ],
                        IdentId(18): [
                            SymbolId(11),
                            SymbolId(12),
                        ],
                        IdentId(19): [
                            SymbolId(8),
                        ],
                        IdentId(20): [
                            SymbolId(10),
                        ],
                        IdentId(21): [
                            SymbolId(7),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: NativeType(
                    IdentId(21),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: NativeType(
                    IdentId(19),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: NativeType(
                    IdentId(9),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(20),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(18),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(22) => Symbol {
                id: SymbolId(22),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(23) => Symbol {
                id: SymbolId(23),
                kind: LetFn(
                    IdentId(5),
                    StmtId(3),
                    [
                        TypeId(5),
                    ],
                    TypeId(1),
                ),
                type_id: TypeId(10),
            },
            SymbolId(24) => Symbol {
                id: SymbolId(24),
                kind: Parameter(
                    IdentId(6),
                    StmtId(3),
                    0,
                ),
                type_id: TypeId(5),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Struct(
                StmtId(1),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Function(
                [
                    TypeId(5),
                ],
                TypeId(1),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(0): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
